Fix overflow-y in upload view

--- a/src/routes/upload/UploadCatPhoto.css
+++ b/src/routes/upload/UploadCatPhoto.css
@@ -51,6 +51,7 @@
 
 .catPhotoFile {
   visibility: hidden;
+  width: 1px;
 }
 
 .uploadCatBtn {
